deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webshop
  namespace: default
  labels:
    app: flask-webshop
spec:
  selector:
    matchLabels:
      app: flask-webshop
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-webshop
    spec:
      containers:
      - name: flask-app
        image: lura00/flask-app
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-webshop
spec:
  selector:
    app: flask-webshop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
