deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webshop
  namespace: default
  labels:
    app: flask-webshop
spec:
  selector:
    matchLabels:
      app: flask-webshop
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-webshop
    spec:
      containers:
      - name: flask-app
        image: eu.gcr.io/breakingbad-w-kbit/flask-app:0.0.24-beta.37
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-webshop
spec:
  selector:
    app: flask-webshop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
