flask-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: flask-services
  name: flask-services
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: flask-services
status:
  loadBalancer: {}
